infra-k8s/base/webhook-service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-service
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`webhook.localhost`)
      kind: Rule
      services:
        - name: webhook-service
          port: 80
